@@ -656,14 +656,331 @@ class BookingServiceTest {
     }
 
     @Test
-    @DisplayName("CalculateRemainingCapacity - Private room with no bookings")
-    void calculateRemainingCapacity_privateRoom() {
+    @DisplayName("CalculateRemainingCapacity - Dormitory with overlapping bookings")
+    void calculateRemainingCapacity_dormitory() {
+        RoomDTO dormRoom = RoomDTO.builder()
+                .id(2L).roomNumber("108").roomType("DORMITORY")
+                .capacity(6).status("AVAILABLE").build();
+
+        Booking existing = Booking.builder()
+                .id(10L).roomId(2L).occupants(3)
+                .startDate(LocalDate.now().plusDays(1))
+                .endDate(LocalDate.now().plusDays(4))
+                .status(BookingStatus.APPROVED).build();
+
+        when(roomService.getRoomById(2L)).thenReturn(dormRoom);
+        when(bookingRepository.findOverlappingBookings(eq(2L), any(), any())).thenReturn(List.of(existing));
+
+        int remaining = bookingService.calculateRemainingCapacity(2L,
+                LocalDate.now().plusDays(1), LocalDate.now().plusDays(4));
+
+        assertEquals(3, remaining);
+    }
+
+    @Test
+    @DisplayName("CalculateRemainingCapacity - Private room already booked returns 0")
+    void calculateRemainingCapacity_privateRoomBooked() {
         when(roomService.getRoomById(1L)).thenReturn(testRoom);
-        when(bookingRepository.findOverlappingBookings(eq(1L), any(), any())).thenReturn(Collections.emptyList());
+        when(bookingRepository.findOverlappingBookings(eq(1L), any(), any())).thenReturn(List.of(testBooking));
 
         int remaining = bookingService.calculateRemainingCapacity(1L,
                 LocalDate.now().plusDays(1), LocalDate.now().plusDays(3));
 
-        assertEquals(1, remaining);
+        assertEquals(0, remaining);
+    }
+
+    @Test
+    @DisplayName("GetBookingsByStatus - Returns filtered list")
+    void getBookingsByStatus_success() {
+        when(bookingRepository.findByStatus(BookingStatus.PENDING)).thenReturn(List.of(testBooking));
+        when(roomService.getRoomById(1L)).thenReturn(testRoom);
+        when(userService.getUserById(1L)).thenReturn(testUser);
+        when(modelMapper.map(any(Booking.class), eq(BookingDTO.class))).thenReturn(testBookingDTO);
+
+        List<BookingDTO> result = bookingService.getBookingsByStatus("PENDING");
+
+        assertEquals(1, result.size());
+    }
+
+    @Test
+    @DisplayName("GetOccupiedDateRanges - Private room returns blocked ranges")
+    void getOccupiedDateRanges_privateRoom() {
+        when(roomService.getRoomById(1L)).thenReturn(testRoom); // SINGLE type
+        when(bookingRepository.findByRoomId(1L)).thenReturn(List.of(testBooking));
+
+        List<OccupiedDateRangeDTO> result = bookingService.getOccupiedDateRanges(1L);
+
+        assertEquals(1, result.size());
+    }
+
+    @Test
+    @DisplayName("GetOccupiedDateRanges - Dormitory returns empty if not full")
+    void getOccupiedDateRanges_dormNotFull() {
+        RoomDTO dormRoom = RoomDTO.builder()
+                .id(2L).roomNumber("108").roomType("DORMITORY")
+                .capacity(6).status("AVAILABLE").build();
+
+        Booking b = Booking.builder()
+                .id(10L).roomId(2L).occupants(2)
+                .startDate(LocalDate.now().plusDays(1))
+                .endDate(LocalDate.now().plusDays(5))
+                .status(BookingStatus.APPROVED).build();
+
+        when(roomService.getRoomById(2L)).thenReturn(dormRoom);
+        when(bookingRepository.findByRoomId(2L)).thenReturn(List.of(b));
+
+        List<OccupiedDateRangeDTO> result = bookingService.getOccupiedDateRanges(2L);
+
+        assertTrue(result.isEmpty());
+    }
+
+    @Test
+    @DisplayName("GetOccupiedDateRanges - Dormitory returns full range when at capacity")
+    void getOccupiedDateRanges_dormFull() {
+        RoomDTO dormRoom = RoomDTO.builder()
+                .id(2L).roomNumber("108").roomType("DORMITORY")
+                .capacity(4).status("AVAILABLE").build();
+
+        Booking b1 = Booking.builder().id(10L).roomId(2L).occupants(2)
+                .startDate(LocalDate.now().plusDays(1)).endDate(LocalDate.now().plusDays(5))
+                .status(BookingStatus.APPROVED).build();
+        Booking b2 = Booking.builder().id(11L).roomId(2L).occupants(2)
+                .startDate(LocalDate.now().plusDays(1)).endDate(LocalDate.now().plusDays(5))
+                .status(BookingStatus.APPROVED).build();
+
+        when(roomService.getRoomById(2L)).thenReturn(dormRoom);
+        when(bookingRepository.findByRoomId(2L)).thenReturn(List.of(b1, b2));
+
+        List<OccupiedDateRangeDTO> result = bookingService.getOccupiedDateRanges(2L);
+
+        assertEquals(1, result.size());
+    }
+
+    @Test
+    @DisplayName("GetOccupiedDateRanges - Dormitory empty bookings returns empty")
+    void getOccupiedDateRanges_dormNoBookings() {
+        RoomDTO dormRoom = RoomDTO.builder()
+                .id(2L).roomType("DORMITORY").capacity(4).build();
+
+        when(roomService.getRoomById(2L)).thenReturn(dormRoom);
+        when(bookingRepository.findByRoomId(2L)).thenReturn(Collections.emptyList());
+
+        List<OccupiedDateRangeDTO> result = bookingService.getOccupiedDateRanges(2L);
+
+        assertTrue(result.isEmpty());
+    }
+
+    @Test
+    @DisplayName("GenerateBookingReceipt - Success")
+    void generateBookingReceipt_success() {
+        testBooking.setStatus(BookingStatus.APPROVED);
+        byte[] pdf = "PDF".getBytes();
+
+        when(bookingRepository.findById(1L)).thenReturn(Optional.of(testBooking));
+        when(userService.getProfile("student@hostel.com")).thenReturn(testUser);
+        when(roomService.getRoomById(1L)).thenReturn(testRoom);
+        when(receiptService.generateReceipt(any(), any(), any())).thenReturn(pdf);
+
+        byte[] result = bookingService.generateBookingReceipt(1L, "student@hostel.com");
+
+        assertArrayEquals(pdf, result);
+    }
+
+    @Test
+    @DisplayName("GenerateBookingReceipt - Failure: Unauthorized user")
+    void generateBookingReceipt_unauthorized() {
+        testBooking.setStatus(BookingStatus.APPROVED);
+        UserDTO otherUser = UserDTO.builder().id(99L).email("other@hostel.com").build();
+
+        when(bookingRepository.findById(1L)).thenReturn(Optional.of(testBooking));
+        when(userService.getProfile("other@hostel.com")).thenReturn(otherUser);
+
+        assertThrows(org.springframework.security.access.AccessDeniedException.class,
+                () -> bookingService.generateBookingReceipt(1L, "other@hostel.com"));
+    }
+
+    @Test
+    @DisplayName("GenerateBookingReceipt - Failure: Booking is PENDING (no receipt)")
+    void generateBookingReceipt_pendingBooking_throwsException() {
+        // testBooking is PENDING by default
+        when(bookingRepository.findById(1L)).thenReturn(Optional.of(testBooking));
+        when(userService.getProfile("student@hostel.com")).thenReturn(testUser);
+
+        assertThrows(IllegalStateException.class,
+                () -> bookingService.generateBookingReceipt(1L, "student@hostel.com"));
+    }
+
+    @Test
+    @DisplayName("GenerateBookingReceipt - Failure: Booking not found")
+    void generateBookingReceipt_notFound() {
+        when(bookingRepository.findById(99L)).thenReturn(Optional.empty());
+
+        assertThrows(BookingNotFoundException.class,
+                () -> bookingService.generateBookingReceipt(99L, "student@hostel.com"));
+    }
+
+    @Test
+    @DisplayName("UpdateBookingStatus - PENDING to REJECTED")
+    void updateBookingStatus_reject_success() {
+        UpdateBookingStatusRequest request = new UpdateBookingStatusRequest();
+        request.setStatus("REJECTED");
+
+        when(bookingRepository.findById(1L)).thenReturn(Optional.of(testBooking));
+        when(bookingRepository.save(any(Booking.class))).thenReturn(testBooking);
+        when(roomService.getRoomById(1L)).thenReturn(testRoom);
+        when(userService.getUserById(1L)).thenReturn(testUser);
+        when(modelMapper.map(any(Booking.class), eq(BookingDTO.class))).thenReturn(testBookingDTO);
+
+        BookingDTO result = bookingService.updateBookingStatus(1L, request);
+
+        assertNotNull(result);
+    }
+
+    @Test
+    @DisplayName("UpdateBookingStatus - PENDING to CANCELLED")
+    void updateBookingStatus_cancel_success() {
+        UpdateBookingStatusRequest request = new UpdateBookingStatusRequest();
+        request.setStatus("CANCELLED");
+
+        when(bookingRepository.findById(1L)).thenReturn(Optional.of(testBooking));
+        when(bookingRepository.save(any(Booking.class))).thenReturn(testBooking);
+        when(roomService.getRoomById(1L)).thenReturn(testRoom);
+        when(userService.getUserById(1L)).thenReturn(testUser);
+        when(modelMapper.map(any(Booking.class), eq(BookingDTO.class))).thenReturn(testBookingDTO);
+
+        BookingDTO result = bookingService.updateBookingStatus(1L, request);
+
+        assertNotNull(result);
+    }
+
+    @Test
+    @DisplayName("UpdateBookingStatus - Dorm room checkout makes available")
+    void updateBookingStatus_dormCheckout_makesAvailable() {
+        RoomDTO dormRoom = RoomDTO.builder()
+                .id(1L).roomNumber("108").roomType("DORMITORY")
+                .capacity(4).status("OCCUPIED").build();
+
+        testBooking.setStatus(BookingStatus.CHECKED_IN);
+        UpdateBookingStatusRequest request = new UpdateBookingStatusRequest();
+        request.setStatus("CHECKED_OUT");
+
+        when(bookingRepository.findById(1L)).thenReturn(Optional.of(testBooking));
+        when(bookingRepository.save(any(Booking.class))).thenReturn(testBooking);
+        when(bookingRepository.findByRoomId(1L)).thenReturn(Collections.emptyList());
+        when(roomService.getRoomById(1L)).thenReturn(dormRoom);
+        when(userService.getUserById(1L)).thenReturn(testUser);
+        when(modelMapper.map(any(Booking.class), eq(BookingDTO.class))).thenReturn(testBookingDTO);
+
+        BookingDTO result = bookingService.updateBookingStatus(1L, request);
+
+        assertNotNull(result);
+        verify(roomService).updateRoomStatus(eq(1L), any());
+    }
+
+    @Test
+    @DisplayName("HandleLateCheckout - Success: With custom fee")
+    void handleLateCheckout_withCustomFee() {
+        Booking checkedIn = Booking.builder()
+                .id(1L).userId(1L).roomId(1L)
+                .status(BookingStatus.CHECKED_IN)
+                .totalPrice(BigDecimal.valueOf(420))
+                .bookingReference("BK-2026-LATE")
+                .startDate(LocalDate.now().minusDays(1))
+                .endDate(LocalDate.now().plusDays(1))
+                .occupants(1).build();
+
+        LateCheckoutRequest request = new LateCheckoutRequest();
+        request.setLateCheckoutFee(BigDecimal.valueOf(50));
+        request.setNotes("Late due to travel");
+
+        when(bookingRepository.findById(1L)).thenReturn(Optional.of(checkedIn));
+        when(bookingRepository.save(any(Booking.class))).thenReturn(checkedIn);
+        when(roomService.getRoomById(1L)).thenReturn(testRoom);
+        when(userService.getUserById(1L)).thenReturn(testUser);
+        when(modelMapper.map(any(Booking.class), eq(BookingDTO.class))).thenReturn(testBookingDTO);
+
+        BookingDTO result = bookingService.handleLateCheckout(1L, request);
+
+        assertNotNull(result);
+        verify(bookingRepository).save(argThat(b ->
+                b.getLateCheckoutFee().compareTo(BigDecimal.valueOf(50)) == 0));
+    }
+
+    @Test
+    @DisplayName("GetOccupancyReport - Failure: Start after end")
+    void getOccupancyReport_invalidDates_throwsException() {
+        assertThrows(IllegalArgumentException.class,
+                () -> bookingService.getOccupancyReport(
+                        LocalDate.now().plusDays(5), LocalDate.now()));
+    }
+
+    @Test
+    @DisplayName("ExportBookingsToCsv - Handles missing user/room gracefully")
+    void exportBookingsToCsv_withMissingUserRoom() {
+        when(bookingRepository.findAll()).thenReturn(List.of(testBooking));
+        when(userService.getUserById(1L)).thenThrow(new RuntimeException("User not found"));
+        when(roomService.getRoomById(1L)).thenThrow(new RuntimeException("Room not found"));
+
+        byte[] csv = bookingService.exportBookingsToCsv();
+
+        assertNotNull(csv);
+        String csvStr = new String(csv);
+        assertTrue(csvStr.contains("Booking Reference"));
+        assertTrue(csvStr.contains("N/A"));
+    }
+
+    @Test
+    @DisplayName("CreateBooking - Success: With active pricing tier (seasonal multiplier)")
+    void createBooking_withPricingTier_success() {
+        com.hostel.room.entity.PricingTier tier = com.hostel.room.entity.PricingTier.builder()
+                .id(1L).seasonName("Summer")
+                .startDate(LocalDate.now())
+                .endDate(LocalDate.now().plusMonths(2))
+                .priceMultiplier(new java.math.BigDecimal("1.5"))
+                .build();
+
+        CreateBookingRequest request = new CreateBookingRequest();
+        request.setRoomId(1L);
+        request.setStartDate(LocalDate.now().plusDays(1));
+        request.setEndDate(LocalDate.now().plusDays(3));
+        request.setOccupants(1);
+
+        when(userService.getProfile("student@hostel.com")).thenReturn(testUser);
+        when(roomService.getRoomById(1L)).thenReturn(testRoom);
+        when(bookingRepository.findOverlappingBookings(eq(1L), any(), any())).thenReturn(Collections.emptyList());
+        when(roomEventRepository.findOverlappingEvents(eq(1L), any(), any())).thenReturn(Collections.emptyList());
+        when(pricingTierRepository.findActiveByRoomIdAndDate(eq(1L), any())).thenReturn(List.of(tier));
+        when(bookingRepository.save(any(Booking.class))).thenReturn(testBooking);
+        when(modelMapper.map(any(Booking.class), eq(BookingDTO.class))).thenReturn(testBookingDTO);
+        when(userService.getUserById(1L)).thenReturn(testUser);
+
+        BookingDTO result = bookingService.createBooking("student@hostel.com", request);
+
+        assertNotNull(result);
+        verify(bookingRepository).save(any(Booking.class));
+    }
+
+    @Test
+    @DisplayName("CreateBooking - Gender policy MALE_ONLY blocks female user")
+    void createBooking_maleOnlyRoom_blocksFemalUser() {
+        UserDTO femaleUser = UserDTO.builder()
+                .id(2L).email("female@hostel.com").gender("FEMALE").build();
+
+        RoomDTO maleRoom = RoomDTO.builder()
+                .id(1L).roomNumber("M01").roomType("SINGLE")
+                .capacity(1).status("AVAILABLE")
+                .genderPolicy("MALE_ONLY").build();
+
+        CreateBookingRequest request = new CreateBookingRequest();
+        request.setRoomId(1L);
+        request.setStartDate(LocalDate.now().plusDays(1));
+        request.setEndDate(LocalDate.now().plusDays(3));
+        request.setOccupants(1);
+
+        when(userService.getProfile("female@hostel.com")).thenReturn(femaleUser);
+        when(roomService.getRoomById(1L)).thenReturn(maleRoom);
+
+        assertThrows(IllegalArgumentException.class,
+                () -> bookingService.createBooking("female@hostel.com", request));
     }
 }
